--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -17,14 +17,6 @@
         <link href="{{ STATIC_URL }}css/main.less" rel="stylesheet" type="text/less">
     {% endcompress %}
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
-
-
-
-    <!--     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ STATIC_URL }}ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ STATIC_URL }}ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}ico/apple-touch-icon-57-precomposed.png"> -->
     <link rel="shortcut icon" href="{{ STATIC_URL }}ico/favicon.ico">
 
     <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
@@ -45,6 +37,9 @@
 </head>
 
 <body class="body">
-{% block content %}{% endblock %}
+
+{% block content %}
+{% endblock %}
+
 </body>
 </html>
