--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -1,45 +1,64 @@
 <!DOCTYPE html>
 {% load compress %}
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8">
-    <title>{% block title%} {% endblock %}</title>
-    <!-- Apple Web App -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap-responsive.min.css" rel="stylesheet">
+    <title>{% block title%}{% endblock %}</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap -->
+    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" media="screen">
+
     {% compress css %}
-        <link href="{{ STATIC_URL }}css/main.less" rel="stylesheet" type="text/less">
+    <link href="{{ STATIC_URL }}css/main.less" rel="stylesheet" type="text/less">
     {% endcompress %}
 
-    <link rel="shortcut icon" href="{{ STATIC_URL }}ico/favicon.ico">
-
-    <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
-    <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
-
-    <!-- Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-41314344-1', 'django.mx');
-      ga('send', 'pageview');
-
-    </script>
-
 </head>
+<body>
 
-<body class="body">
+<!-- Fixed navbar -->
+<div class="navbar navbar-fixed-top">
 
-{% block content %}
-{% endblock %}
+    <div class="container">
 
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+
+        <a class="navbar-brand" href="#">Django México</a>
+
+        <div class="nav-collapse collapse">
+
+            <ul class="nav navbar-nav pull-right">
+                <li><a href="#">Trabajos</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+
+        </div><!--/.nav-collapse -->
+    </div>
+</div>
+
+<div class="lightnav">
+
+</div>
+
+<div class="container">
+
+    {% block container %}
+    {% endblock %}
+
+</div> <!-- /container -->
+
+
+
+
+<!-- JavaScript plugins (requires jQuery) -->
+<script src="http://code.jquery.com/jquery.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
 </body>
 </html>
