--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -1,35 +1,8 @@
-body
-{
-  padding-top: 60px;
+.jumbotron {
+    text-align: center;
+    background-color: transparent;
 }
 
-.navbar
-{
-  background-color: #323a45;
-  height: 5em;
-
-}
-
-navbar-toggle, nav-collapse
-{
-  background-color: #323a45;
-
-}
-
-.lightnav
-{
-  background-color: #4ead82;
-  height: 2em;
-  width: 100%;
-
-}
-
-a.navbar
-{
-  color: #ffffff;
-}
-
-.jumbotron
-{
-  margin-top: 20px;
+.featurette-heading {
+    margin-top: 50px;
 }
