--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -30,6 +30,31 @@
 </head>
 
 <body>
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">django.mx</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="">Trabajos</a></li>
+                    <li class="active"><a href="">Blog</a></li>
+                    <li><a href="">Cursos</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
+
+    <div class="container">
     {% block content %}{% endblock %}
+    </div>
+
 </body>
 </html>
