Some basic styles

--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -1,3 +1,9 @@
+body {
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    color: #323A44;
+}
+
 .jumbotron {
     text-align: center;
     background-color: transparent;
@@ -6,3 +12,37 @@
 .featurette-heading {
     margin-top: 50px;
 }
+
+.navbar-static-top {
+    background-color: #323A44;
+    height: 150px;
+    .container {
+        margin-top: 50px;
+    }
+}
+
+.navbar-default {
+    background-image: none;
+    margin-bottom: 0;
+    border: none;
+    .navbar-brand {
+        background: transparent url(../img/djangomx.png) no-repeat 0px 0px;
+        width: 210px;
+        height: 53px;
+        text-indent: -9999px;
+    }
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: #FFF;
+}
+
+.navbar-brand, .navbar-nav > li > a {
+    text-shadow: none;
+}
+
+.navbar-green {
+    height: 25px;
+    background-color: #50AE84;
+}
+
