--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -11,6 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
     {% compress css %}
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/bootstrap-theme.css" rel="stylesheet">
@@ -51,7 +52,7 @@
             </div><!--/.nav-collapse -->
         </div>
     </div>
-
+    <div class="navbar-green"></div>
     <div class="container">
     {% block content %}{% endblock %}
     </div>
