--- a/djangomx/templates/home.html
+++ b/djangomx/templates/home.html
@@ -16,13 +16,13 @@
         <p class="lead">Defina sus modelos de datos en su totalidad en Python. Usted recibe una rica API dinámica base de datos de acceso de forma gratuita - pero todavía se puede escribir SQL si es necesario.</p>
     </div>
     <div class="col-md-5">
-        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="">
+        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="{{ STATIC_URL }}img/orm.png">
     </div>
 </div>
 
 <div class="row featurette">
     <div class="col-md-5">
-        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="">
+        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="{{ STATIC_URL }}img/admin.png">
     </div>
     <div class="col-md-7">
         <h2 class="featurette-heading">Interfaz de administración automática</h2>
@@ -36,13 +36,13 @@
         <p class="lead">Diseña URL elegantes,  sin limitaciones específicas del framework. Se tan flexible como quieras.</p>
     </div>
     <div class="col-md-5">
-        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="">
+        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="{{ STATIC_URL }}img/urls.png">
     </div>
 </div>
 
 <div class="row featurette">
     <div class="col-md-5">
-        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="">
+        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="{{ STATIC_URL }}img/templates.png">
     </div>
     <div class="col-md-7">
         <h2 class="featurette-heading">Diseño de templates</h2>
@@ -56,13 +56,13 @@
         <p class="lead">Engánchate dentro del memchached u otros caches frameworks para super performance</p>
     </div>
     <div class="col-md-5">
-        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="">
+        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="{{ STATIC_URL }}img/cache.png">
     </div>
 </div>
 
 <div class="row featurette">
     <div class="col-md-5">
-        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="">
+        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="{{ STATIC_URL }}img/internacionalizacion.png">
     </div>
     <div class="col-md-7">
         <h2 class="featurette-heading">Internacionalización</h2>
