active selected section of navbar

--- a/djangomx/blog/templates/blog_home.html
+++ b/djangomx/blog/templates/blog_home.html
@@ -2,6 +2,7 @@
 {% load compress %}
 
 {% block title%}Django México - Blog{% endblock %}
+{% block activeblog %}class="active"{% endblock %}
 
 {% block content %}
 <h1>Blog</h1>
