--- a/djangomx/jobs/templates/jobs_home.html
+++ b/djangomx/jobs/templates/jobs_home.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% load compress %}
 
-{% block title%}Django México - Blog{% endblock %}
+{% block title%}Django México - Trabajos{% endblock %}
+{% block activejobs %}class="active"{% endblock %}
 
 {% block content %}
 <h1>Jobs</h1>
