--- a/djangomx/templates/home.html
+++ b/djangomx/templates/home.html
@@ -2,6 +2,7 @@
 {% load compress %}
 
 {% block title%}Django México{% endblock %}
+{% block activehome %}class="active"{% endblock %}
 
 {% block content %}
 <div class="jumbotron">
