--- a/djangomx/contact/templates/contact_home.html
+++ b/djangomx/contact/templates/contact_home.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% load compress %}
 
-{% block title%}Django México - Blog{% endblock %}
+{% block title%}Django México - Contacto{% endblock %}
+{% block activecontact %}class="active"{% endblock %}
 
 {% block content %}
 <h1>Contact</h1>
