--- a/djangomx/courses/templates/courses_home.html
+++ b/djangomx/courses/templates/courses_home.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% load compress %}
 
-{% block title%}Django México - Blog{% endblock %}
+{% block title%}Django México - Cursos{% endblock %}
+{% block activecourse %}class="active"{% endblock %}
 
 {% block content %}
 <h1>Courses</h1>
