--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -80,3 +80,11 @@ body, h1, h2, h3, h4, h5, h6 {
         margin: 10px auto;
     }
 }
+
+footer {
+    background-color: #323A44;
+    color: #FFF;
+    margin-top: 20px;
+    padding: 30px 0;
+    text-align: center;
+}
