--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -57,6 +57,8 @@
     <div class="container">
     {% block content %}{% endblock %}
     </div>
-
+    <footer>
+        <p>© Copyright django.mx · 2014 · All rights reserved.</p>
+    </footer>
 </body>
 </html>
