--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -1,7 +1,7 @@
 // Basic
-body, h1, h2, h3, h4, h5, h6 {
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
+body {
+    font: normal 16px "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 300;
     color: #323A44;
 }
 
@@ -44,6 +44,8 @@ body, h1, h2, h3, h4, h5, h6 {
 
 .navbar-default .navbar-nav > li > a {
     color: #FFF;
+    font-size: 12px;
+    text-transform: uppercase;
 }
 
 .navbar-brand, .navbar-nav > li > a {
@@ -79,6 +81,28 @@ body, h1, h2, h3, h4, h5, h6 {
     .featurette-image {
         margin: 10px auto;
     }
+}
+
+
+#newsletter {
+    text-align: center;
+    form {
+        width: 50%;
+        margin: 0 25%;
+    }
+}
+
+.form-control {
+    font-weight: 300;
+    border-color: #ecf0f1;
+    background-color: #ecf0f1;
+    box-shadow: none;
+}
+
+.btn-default, .label-default {
+    background-color: #50AE84;
+    border-color: #50AE84;
+    color: #FFF;
 }
 
 footer {
