--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -15,6 +15,10 @@ body {
     color: #FFF;
 }
 
+small, .small {
+    font-size: 70%;
+}
+
 .jumbotron {
     text-align: center;
     background-color: transparent;
@@ -86,12 +90,6 @@ body {
 }
 
 // Home features
-.featurette {
-    margin-bottom: 100px;
-    .featurette-image {
-        margin: 10px auto;
-    }
-}
 
 .feature-row {
     margin-bottom: 50px;
@@ -150,10 +148,22 @@ body {
     color: #FFF;
 }
 
+.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default {
+    color: #FFF;
+    background-color: #323A44;
+    border-color: #adadad;
+}
+
+.social-section {
+    margin-top: 50px;
+    padding: 30px 0;
+    background: #252D3A;
+    text-align: center;
+}
+
 footer {
     background-color: #323A44;
     color: #FFF;
-    margin-top: 20px;
     padding: 30px 0;
     text-align: center;
 }
