visual ajax subscribe animations

--- a/djangomx/templates/home.html
+++ b/djangomx/templates/home.html
@@ -70,7 +70,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control input-lg" placeholder="Ingresa tu correo" name="email_field">
                         <span class="input-group-btn">
-                            <button class="btn btn-lg btn-default" type="submit">Suscribete</button>
+                            <button id="subscribe-button" class="btn btn-lg btn-default" type="submit">Suscribete</button>
                         </span>
                     </div>
                 </form>
