--- a/djangomx/templates/home.html
+++ b/djangomx/templates/home.html
@@ -6,8 +6,8 @@
 
 {% block content %}
 <div class="jumbotron">
-    <h2 id="welcome-h2">El WEB framework para perfeccionistas con fechas límite.</h2>
-    <p id="welcome-p" class="lead">Django hace que sea más fácil de construir mejores aplicaciones web más rápido y con menos código</p>
+    <h2 class="welcome-h2">El WEB framework para perfeccionistas con fechas límite.</h2>
+    <p class="welcome-p" class="lead">Django hace que sea más fácil de construir mejores aplicaciones web más rápido y con menos código</p>
 </div>
 
 <div class="row feature-row">
