Let the job form simple for now

--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -171,3 +171,11 @@ footer {
 .label-error {
     color: #E46662;
 }
+
+#notification {
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 100000;
+}
