--- a/djangomx/jobs/templates/jobs_home.html
+++ b/djangomx/jobs/templates/jobs_home.html
@@ -15,18 +15,19 @@
 
 <div class="row row-offcanvas row-offcanvas-right">
     <div class="col-xs-12 col-sm-9">
-        {% for object in jobs %}
+
         <div class="panel-group" id="accordion">
+            {% for object in jobs %}
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse-{{ object.id }}">
                             {{ object.title }}
                         </a>
                         <span class="job-date pull-right">{{ object.created_at | date:"D d M Y" }}</span>
                     </h4>
                 </div>
-                <div id="collapseOne" class="panel-collapse collapse in">
+                <div id="collapse-{{ object.id }}" class="panel-collapse collapse">
                     <div class="panel-body">
                         {{ object.content | safe}}
                         {% thumbnail object.image "100x100" crop="center" as im %}
@@ -35,15 +36,16 @@
                     </div>
                 </div>
             </div>
+            {% empty %}
+                <h4>Aún no existen ofertas de trabajo.</h4>
+            {% endfor %}
         </div>
-        {% empty %}
-            <h4>Aún no existen ofertas de trabajo.</h4>
-        {% endfor %}
+
     </div><!--/span-->
 
     <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
         <div class="list-group">
-            <button class="btn btn-default btn-lg" data-toggle="modal" data-target="#job-modal">
+            <button class="btn btn-default btn-lg">
                 Agrega una oferta de trabajo
             </button>
             <!-- Button trigger modal -->
@@ -51,7 +53,7 @@
     </div><!--/span-->
 
     <!-- Modal -->
-    <div class="modal fade" id="job-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal">
         <div class="modal-dialog">
             <form id="add-job-form" method="POST" action="">
                 {% csrf_token %}
@@ -61,7 +63,6 @@
                         <h4 class="modal-title" id="myModalLabel">Agrega una nueva oferta de trabajo.</h4>
                     </div>
                     <div class="modal-body">
-                        {{ form.media }}
                         <div class="form-group">
                             <label for="title">* Titulo:</label>
                             <input type="text" class="form-control" id="id_title" placeholder="Jr. Developer" name="title">
