--- a/djangomx/jobs/templates/jobs_home.html
+++ b/djangomx/jobs/templates/jobs_home.html
@@ -45,7 +45,7 @@
 
     <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
         <div class="list-group">
-            <button class="btn btn-default btn-lg">
+            <button id="add-job" class="btn btn-default btn-lg">
                 Agrega una oferta de trabajo
             </button>
             <!-- Button trigger modal -->
