--- a/djangomx/contact/templates/contact_home.html
+++ b/djangomx/contact/templates/contact_home.html
@@ -5,5 +5,38 @@
 {% block activecontact %}class="active"{% endblock %}
 
 {% block content %}
-<h1>Contact</h1>
-{% endblock %}
+<div class="row">
+    <div class="jumbotron">
+        <h2 class="welcome-h2">Contacto!</h2>
+        <p class="welcome-p">Necesitas ayuda con algun projecto? o simplemente quieres dejar un saludo.</p>
+    </div> 
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <form method="POST" action="">
+            {% csrf_token %} 
+            <div class="form-group">
+                <label for="name" {% if form.name.errors %}class="label-error"{% endif %}>* {{ form.name.label }}:</label>
+                {{ form.name }}
+            </div>
+            <div class="form-group">
+                <label for="email" {% if form.email.errors %}class="label-error"{% endif %}>* {{ form.email.label }}:</label>
+                {{ form.email }}
+            </div>
+            <div class="form-group">
+                <label for="subject" {% if form.subject.errors %}class="label-error"{% endif %}>* {{ form.subject.label }}:</label>
+                {{ form.subject }}
+            </div>
+            <div class="form-group">
+                <label for="message" {% if form.message.errors %}class="label-error"{% endif %}>* {{ form.message.label }}:</label>
+                {{ form.message }}
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-default">Someter</button>
+            </div>
+        </form>
+    </div>
+    <div class="col-md-6"></div>
+</div>
+    {% endblock %}
