--- a/djangomx/courses/templates/courses_home.html
+++ b/djangomx/courses/templates/courses_home.html
@@ -5,5 +5,10 @@
 {% block activecourse %}class="active"{% endblock %}
 
 {% block content %}
-<h1>Courses</h1>
+<div class="row">
+    <div class="jumbotron">
+        <h2 class="welcome-h2">Cursos!</h2>
+        <p class="welcome-p">Estamos planeando sacar una serie de cursos para principios de verano de el 2014. Mantente informado.</p>
+    </div> 
+</div>
 {% endblock %}
