Custom User added. With gravatar image and working

--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -18,7 +18,7 @@
     <link href="{{ STATIC_URL }}css/main.less" rel="stylesheet" type="text/less">
     {% endcompress %}
 
-    <!-- 
+    <!--
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ STATIC_URL }}ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ STATIC_URL }}ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}ico/apple-touch-icon-72-precomposed.png">
@@ -75,7 +75,7 @@
         </div>
     </section>
     <footer>
-        <small>© Copyright Derecho de Autor · dubnio.com · django.mx · 2014 · Todos los derechos reservados</small>
+        <small>© Copyright · dubnio.com · django.mx · 2014 · Todos los derechos reservados</small>
     </footer>
     {% compress js %}
     <script src="{{ STATIC_URL }}js/djangomx.js" type="text/javascript"></script>
