added blog style

--- a/djangomx/blog/templates/blog_home.html
+++ b/djangomx/blog/templates/blog_home.html
@@ -5,5 +5,43 @@
 {% block activeblog %}class="active"{% endblock %}
 
 {% block content %}
-<h1>Blog</h1>
+<div class="blog-header">
+    <h1 class="blog-title">El blog de django.mx</h1>
+    <p class="lead blog-description">Este es el blog oficial de django.mx.</p>
+</div>
+
+<div class="row">
+
+    <div class="col-sm-8 blog-main">
+        {% for post in posts %}
+        <div class="blog-post">
+            <h2 class="blog-post-title">{{ post.title }}</h2>
+            <p class="blog-post-meta">{{ post.created_at }} by <a href="#">{{ post.author }}</a></p>
+            {{ post.content|safe|escape }}
+        </div><!-- /.blog-post -->
+        {% empty %}
+            <h2>Aún no hay post de entradas.</h2>
+        {% endfor %}
+        <!-- <ul class="pager">
+        <li><a href="#">Previous</a></li>
+        <li><a href="#">Next</a></li>
+        </ul> -->
+    </div>
+
+    <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+        <div class="sidebar-module sidebar-module-inset">
+            <p>En este blog trataremos de escribir tips y otras cosas utiles de django o python.</p>
+        </div>
+        <div class="sidebar-module">
+            <h4>En otra parte</h4>
+            <ol class="list-unstyled">
+                <li><a href="#">GitHub</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Facebook</a></li>
+            </ol>
+        </div>
+    </div>
+
+</div>
+
 {% endblock %}
