--- a/djangomx/blog/templates/blog_home.html
+++ b/djangomx/blog/templates/blog_home.html
@@ -30,7 +30,7 @@
 
     <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
         <div class="sidebar-module sidebar-module-inset">
-            <p>En este blog trataremos de escribir tips y otras cosas utiles de django o python.</p>
+            <p>En este blog trataremos de escribir tips y otras cosas útiles de django o python.</p>
         </div>
         <div class="sidebar-module">
             <h4>En otra parte</h4>
