--- a/djangomx/courses/templates/courses_home.html
+++ b/djangomx/courses/templates/courses_home.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="row">
     <div class="jumbotron">
-        <h2 class="welcome-h2">Cursos!</h2>
+        <h2 class="welcome-h2">¡Cursos!</h2>
         <p class="welcome-p">Estamos planeando sacar una serie de cursos para principios de verano de el 2014. Mantente informado.</p>
     </div> 
 </div>
