--- a/djangomx/jobs/templates/jobs_home.html
+++ b/djangomx/jobs/templates/jobs_home.html
@@ -8,8 +8,8 @@
 {% block content %}
 <div class="row">
     <div class="jumbotron">
-        <h2 class="welcome-h2">Encuentra algun desarrollador Django!</h2>
-        <p class="welcome-p">Postea tu oferta de trabajo rapido y ponte en contacto con un desarrollador django en México.</p>
+        <h2 class="welcome-h2">Encuentra algún desarrollador Django!</h2>
+        <p class="welcome-p">Postea tu oferta de trabajo rápido y ponte en contacto con un desarrollador django en México.</p>
     </div> 
 </div>
 
