--- a/djangomx/contact/templates/contact_home.html
+++ b/djangomx/contact/templates/contact_home.html
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="jumbotron">
         <h2 class="welcome-h2">Contacto!</h2>
-        <p class="welcome-p">¿Necesitas ayuda con algun proyecto, simplemente quieres dejar un saludo?</p>
+        <p class="welcome-p">¿Necesitas ayuda con algún proyecto? o simplemente ¿quieres dejar un saludo?</p>
     </div>
 </div>
 
