Fix responsive menu issue #1

--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -89,6 +89,12 @@ small, .small {
     background-image: none;
 }
 
+.navbar-collapse {
+    background-color: #323A44;
+    border: none;
+    box-shadow: none;
+}
+
 // Home features
 
 .feature-row {
