--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -77,7 +77,7 @@
     </div>
     <section class="social-section">
         <div>
-            <a href="https://www.facebook.com/django.mexico" class="btn btn-default btn-lg" role="button">
+            <a href="https://www.facebook.com/django.mexico" target="_blank" class="btn btn-default btn-lg" role="button">
                 <img src="{{ STATIC_URL }}img/social-facebook.png"> Facebook
             </a>
             <!--
