--- a/djangomx/blog/templates/blog_home.html
+++ b/djangomx/blog/templates/blog_home.html
@@ -42,9 +42,9 @@
         <div class="sidebar-module">
             <h4>En otra parte</h4>
             <ol class="list-unstyled">
-                <li><a href="https://twitter.com/django_mx">Twitter</a></li>
-                <li><a href="https://www.facebook.com/django.mexico">Facebook</a></li>
-                <li><a href="https://github.com/dubnio/djangomx">GitHub</a></li>
+                <li><a href="https://twitter.com/django_mx" target="_blank">Twitter</a></li>
+                <li><a href="https://www.facebook.com/django.mexico" target="_blank">Facebook</a></li>
+                <li><a href="https://github.com/dubnio/djangomx" target="_blank">GitHub</a></li>
             </ol>
         </div>
     </div>
