--- a/djangomx/contact/templates/contact_home.html
+++ b/djangomx/contact/templates/contact_home.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="row">
     <div class="jumbotron">
-        <h2 class="welcome-h2">Contacto!</h2>
+        <h2 class="welcome-h2">¡Contacto!</h2>
         <p class="welcome-p">¿Necesitas ayuda con algún proyecto? o simplemente ¿quieres dejar un saludo?</p>
     </div>
 </div>
