--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -8,8 +8,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="keywords" content="django, México, mexico, framework, desarrolladores, python, development, freelance, ofertas, trabajo, codigo, open source, cursos, tutoriales">
+    <meta name="description" content="Django Mexico es la comunidad de desarrolladores Django el framework que hace que sea más fácil de construir mejores aplicaciones web más rápido y con menos código">
+    <meta name="robots" content="index, follow">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,400italic,700italic" rel="stylesheet" type="text/css">
     {% compress css %}
