Added pagination, archives, Feed and new templates

--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -185,3 +185,25 @@ footer {
     width: 100%;
     z-index: 100000;
 }
+
+
+.pagination {
+  margin: 0 auto;
+  width: 75%;
+}
+
+.pagination-links {
+  margin: 0 auto;
+  width: 50%;
+  text-align: center;
+}
+
+.pagination-links a {
+  text-decoration: none;
+  color: #428BCA;
+}
+
+.current {
+  margin-left: 2em;
+  margin-right: 2em;
+}
