--- a/djangomx/blog/templates/category.html
+++ b/djangomx/blog/templates/category.html
@@ -13,6 +13,9 @@
 <div class="row">
 
     <div class="col-sm-8 blog-main">
+
+        <h2>Esntradas para la categoría: {{ category.title }}</h2>
+
         {% for post in posts %}
         <div class="blog-post">
             <h2 class="blog-post-title">{{ post.title }}</h2>
