--- a/djangomx/blog/templates/post.html
+++ b/djangomx/blog/templates/post.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% load compress %}
 
-{% block title%}Django México - Blog{% endblock %}
+{% block title%}Django México - {{ post.title }}{% endblock %}
 {% block activeblog %}class="active"{% endblock %}
 
 {% block content %}
 <div class="blog-header">
-    <h1 class="blog-title">El blog de django.mx</h1>
-    <p class="lead blog-description">Este es el blog oficial de django.mx.</p>
+    <h2 class="blog-title">El blog de django.mx</h2>
+    <hr>
 </div>
 
 <div class="row">
@@ -19,11 +19,11 @@
                 <span class="glyphicon glyphicon-calendar"></span>{{ post.created_at }} por <a href="#">{{ post.author }}</a>
             </p>
             <hr>
-            {{ post.content|safe|escape }}
             {% if post.image %}
-            <hr>
             <img src="{{ post.image.url }}" class="img-responsive img-rounded">
+            <hr>
             {% endif %}
+            {{ post.content|safe|escape }}
         </div><!-- /.blog-post -->
 
     </div><!-- End blog main -->
