--- a/djangomx/blog/templates/post.html
+++ b/djangomx/blog/templates/post.html
@@ -24,6 +24,11 @@
             <hr>
             {% endif %}
             {{ post.content|safe|escape }}
+            <hr>
+
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://django.mx{% url 'view_post' post.slug %}" data-via="django_mx" data-hashtags="django">Tweet</a>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </div><!-- /.blog-post -->
 
     </div><!-- End blog main -->
