--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -81,9 +81,9 @@
             <a href="https://www.facebook.com/django.mexico" target="_blank" class="btn btn-default btn-lg" role="button">
                 <img src="{{ STATIC_URL }}img/social-facebook.png"> Facebook
             </a>
-            <!--
-            <a href="#" class="btn btn-default btn-lg" role="button"><img src="{{ STATIC_URL }}img/social-twitter.png"></a>
-            -->
+            <a href="https://twitter.com/django_mx" target="_blank" class="btn btn-default btn-lg" role="button">
+                <img src="{{ STATIC_URL }}img/social-twitter.png"> Twitter
+            </a>
         </div>
     </section>
     <footer>
