--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -218,3 +218,15 @@ footer {
 .blog-post-title a{
     color: #323A44;
 }
+
+#map-wrapper {
+    height: 500px;
+}
+
+#map {
+    position: absolute;
+    top:0;
+    bottom:0;
+    height: 100%;
+    width:100%;
+}
