Added djangojobs logo in jobs page

--- a/djangomx/jobs/templates/jobs_home.html
+++ b/djangomx/jobs/templates/jobs_home.html
@@ -50,6 +50,12 @@
             </button>
             <!-- Button trigger modal -->
         </div>
+        <hr>
+        Te recomendamos también anunciar tu oferta en <a href="http://djangojobs.net">http://djangojobs.net</a> y te regalamos un cupón de descuento.
+        <hr>
+        <a href="http://djangojobs.net">
+            <img src="{{ STATIC_URL }}img/djangojobs.png" class="img-responsive">
+        </a>
     </div><!--/span-->
 
     <!-- Modal -->
